--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "decap": "decap-server"
   },
   "dependencies": {
+    "firebase": "^10.14.0",
+    "firebase-admin": "^12.6.0",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "server-only": "^0.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.7",
     "@babel/preset-react": "^7.25.7",
+    "@tailwindcss/forms": "^0.5.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
