--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "decap": "decap-server"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "firebase": "^10.14.0",
     "firebase-admin": "^12.6.0",
     "next": "14.2.14",
