--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_FIREBASE_APP_ID=
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=
 NEXT_PUBLIC_FIREBASE_CLIENT_EMAIL=
+
+SITE_TITLE=
+SITE_DESCRIPTION=
