--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.14.0",
     "firebase-admin": "^12.6.0",
     "next": "14.2.14",
+    "node-cache": "^5.1.2",
     "react": "^18",
     "react-dom": "^18",
     "server-only": "^0.0.1",
