--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Firebase
 firebase-service-account.json
+public/firebase-auth-sw.js
