--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "cookies-next": "^4.3.0",
     "dayjs": "^1.11.13",
     "firebase": "^10.14.0",
     "firebase-admin": "^12.6.0",
@@ -18,6 +19,7 @@
     "node-cache": "^5.1.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "server-only": "^0.0.1",
     "zod": "^3.23.8"
   },
@@ -29,6 +31,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "decap-server": "^3.1.2",
+    "esbuild": "^0.24.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "frontmatter-markdown-loader": "^3.7.0",
