--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.11.13",
     "firebase": "^10.14.0",
     "firebase-admin": "^12.6.0",
+    "flowbite": "^2.5.2",
     "next": "14.2.14",
     "node-cache": "^5.1.2",
     "react": "^18",
@@ -30,6 +31,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "decap-server": "^3.1.2",
     "esbuild": "^0.24.0",
     "eslint": "^8",
