--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,11 +17,10 @@
         "name": "next"
       }
     ],
-    "baseUrl": "./src",
     "paths": {
-      "@/*": ["./*"],
+      "@/*": ["./src/*"],
     }
   },
-  "include": ["next-env.d.ts", "global.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "global.d.ts", "./src/**/*.ts", "./src/**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
