--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "autoprefixer": "^10.4.20",
     "decap-server": "^3.1.2",
     "esbuild": "^0.24.0",
-    "eslint": "^8",
+    "eslint": "<9.0.0",
     "eslint-config-next": "14.2.14",
     "frontmatter-markdown-loader": "^3.7.0",
     "postcss": "^8",
