--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "decap": "decap-server"
+    "decap": "decap-server",
+    "tools": "ts-node -P tools.tsconfig.json ./src/tools/index.ts"
   },
   "dependencies": {
     "classnames": "^2.5.1",
@@ -34,6 +35,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
     "decap-server": "^3.1.2",
+    "dotenv": "^16.4.5",
     "esbuild": "^0.24.0",
     "eslint": "<9.0.0",
     "eslint-config-next": "14.2.14",
