--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_FIREBASE_APP_ID=
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=
 NEXT_PUBLIC_FIREBASE_CLIENT_EMAIL=
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
 
 SITE_TITLE=
 SITE_SHORT_TITLE=
